@@ -1,4 +1,4 @@
-/__pycache__/
+__pycache__/
 /server/cdriver/franklin-cdriver
 /server/cdriver/bbb_pru.bin
 /server/cdriver/build
