@@ -1,8 +1,6 @@
-# This file contains the settings for franklin-server.
-# It is used by /etc/init.d/franklin, for starting and stopping
-#  the server.
-# See /etc/init.d/franklin for possible variables to assign.
-# If no value is given here, the default from that file is used.
+# This file contains the settings for franklin.
+# It is used by /var/lib/franklin/start-franklin for starting the server.
+# See that file for possible variables to assign and their defaults.
 #
 # This file is sourced as a shell script, so no spaces are allowed
-# around the = sign.
+# around the = signs.
