@@ -1,0 +1,1 @@
+debian/start-franklin /usr/lib/franklin/
