@@ -6,6 +6,7 @@ franklin (0.2-2) UNRELEASED; urgency=medium
   * Escalate privileges to highest user without new password; use password from
     less privileged user.
   * Change user to _franklin.
+  * Use systemd unit file instead of init script.
 
  -- Bas Wijnen <wijnen@debian.org>  Tue, 31 May 2022 20:13:04 +0000
 
